备注：upload jcenter的时候，包名要求不一样，不能引用第三方aar

--- a/libtest/src/main/AndroidManifest.xml
+++ b/libtest/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
         android:supportsRtl="true">
         <activity android:name=".LibTestMainActivity">
         </activity>
+        <activity android:name=".mainActivity">
+        </activity>
     </application>
 
 </manifest>
