--- a/libtest/build.gradle
+++ b/libtest/build.gradle
@@ -7,8 +7,8 @@ android {
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
+        versionCode 111
+        versionName "1.1.1"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -35,7 +35,7 @@ dependencies {
     })
 
 
-    compile(name: 'mylibrary-1.1.0', ext: 'aar')
+//    compile(name: 'mylibrary-1.1.0', ext: 'aar')
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
@@ -58,7 +58,7 @@ ext {
     siteUrl = 'https://github.com/Natanic/libtest'
     gitUrl = 'https://github.com/Natanic/libtest.git'
 
-    libraryVersion = '1.1.0'
+    libraryVersion = '1.1.3'
 
     developerId = 'deer'
     developerName = 'zdeer'
