--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,8 +44,8 @@ dependencies {
 //    compile(name: 'mylibrary-1.1.0', ext: 'aar')
 
 //    compile project(':mylibrary')
-//    compile('com.youjie:mylibrary:1.1.0')
+    compile('com.youjie:mylibrary:1.1.0')
 
 //    compile 'com.lib:mylib:1.1.0'
-    compile ('com.libt:libtest:1.1.3')
+    compile ('com.libt:libtest:1.1.4')
 }
