--- a/libtest/build.gradle
+++ b/libtest/build.gradle
@@ -26,6 +26,9 @@ repositories {
     flatDir {
         dirs 'libs'
     }
+
+    maven { url "https://dl.bintray.com/deer/kabuse/" }
+
 }
 
 dependencies {
@@ -39,6 +42,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+
+
+    compile('com.youjie:mylibrary:1.1.0')
 }
 
 
@@ -58,7 +64,7 @@ ext {
     siteUrl = 'https://github.com/Natanic/libtest'
     gitUrl = 'https://github.com/Natanic/libtest.git'
 
-    libraryVersion = '1.1.3'
+    libraryVersion = '1.1.4'
 
     developerId = 'deer'
     developerName = 'zdeer'
